fix the alignment

--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,8 @@ table {
 h2.projects-title {
     text-align: left; 
     margin-top: 150px; 
-    padding-left: 15px; 
+    margin-bottom: 50px;
+    padding-left: 0; 
     font-size: 2rem; 
 }
 
